--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ html , body {
 
 h1 {
     margin: 0;
+    color: white;
+
 }
 
 h2 {
-    background: pink;
     margin: 0;
     text-align: center;
     padding: 15px;
@@ -20,7 +21,6 @@ h3{
 
 /* NAV */
 nav {
-    background: purple;
     height: 15vh;
 }
 
