--- a/style.css
+++ b/style.css
@@ -1,27 +1,52 @@
 html , body {
     margin: 0;
     padding: 0;
+    background-image: url(images/bg6.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    
 }
 
 h1 {
-    margin: 0;
+    /*font-family: 'Great Vibes', cursive;*/
+    font-family: 'Amatic SC', cursive;
+    margin : 20px 0 0 20px;
     color: white;
+    font-size: 3.5em;
 
 }
 
 h2 {
+    font-family: 'Nunito', sans-serif;
+    border-radius: 10px;
+    background-color: rgb(208, 208, 211);
     margin: 0;
     text-align: center;
     padding: 15px;
+    font-size: 1.5em;
 }
 
 h3{
+    font-family: 'Nunito', sans-serif;
     margin: 15px;
+}
+
+h5{
+    font-family: 'Amatic SC', cursive;
+    margin: 0 0 0 65px;
+    color: white;
 }
 
 /* NAV */
 nav {
     height: 15vh;
+    /*background-image: url(images/banner_watch_shop2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;*/
+    flex-direction: column;
+    display: flex;
+    justify-content: flex-start;
 }
 
 /* MAIN */
@@ -37,9 +62,7 @@ main {
 
 /* div PRODUCTS */
 div#products {
-    background-image: url(images/black-graphite-background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    font-family: 'Nunito', sans-serif;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -49,8 +72,9 @@ div#products {
 }
 
 div#products div.watches {
-    background: white;
-    opacity: 70%;
+    background: rgba(255, 255, 255, 0.349);
+    
+    border-radius: 10px;
     width: 25%;
     margin: 2em 1em;
 }
@@ -59,16 +83,28 @@ div#products div.watches {
 div#cart {
     display: flex;
     flex-direction: column;
-    background: red;
+    background: rgb(71, 70, 70);
 }
 
 /* FOOTER */
 body > footer {
-    background: yellow;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+    height: 35px;
+  }
+
+  .logo {
+    height: 20px;
+    margin: 5px 12px;
+  }
+
 
 #cart footer, #cart header{
-    background: blue;
+    background: rgb(107, 107, 109);
     margin: 0 10px ;
 }
 
@@ -79,7 +115,7 @@ body > footer {
 }
 
 #cart div{
-    background: rgb(1, 255, 77);
+    background: rgb(232, 235, 233);
     margin: 0 10px;
     height: 100%;
 }
