--- a/style.css
+++ b/style.css
@@ -1,90 +1,142 @@
-html , body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 h2 {
-    background: pink;
-    margin: 0;
-    text-align: center;
-    padding: 15px;
+  background: pink;
+  margin: 0;
+  text-align: center;
+  padding: 15px;
 }
 
-h3{
-    margin: 15px;
+#cart span {
+  margin: 15px;
 }
 
 /* NAV */
 nav {
-    background: purple;
-    height: 15vh;
+  background: purple;
+  height: 15vh;
 }
 
 /* MAIN */
 main {
-    height: 80vh;
-    width: 90%;
-    margin: 2em auto;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 10% 80%;
-    gap: 30px;
+  height: 80vh;
+  width: 90%;
+  margin: 2em auto;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 10% 80%;
+  gap: 30px;
 }
 
 /* div PRODUCTS */
 div#products {
-    background-image: url(images/black-graphite-background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    grid-column: 1 / 2;
-    grid-row: 2;
-    width: 100%;
+  background-image: url(images/black-graphite-background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  grid-column: 1 / 2;
+  grid-row: 2;
+  width: 100%;
 }
 
 div#products div.watches {
-    background: white;
-    opacity: 70%;
-    width: 25%;
-    margin: 2em 1em;
-}
-
-/* div CART */
-div#cart {
-    display: flex;
-    flex-direction: column;
-    background: red;
+  background: white;
+  opacity: 70%;
+  width: 25%;
+  margin: 2em 1em;
 }
 
 /* FOOTER */
 body > footer {
-    background: yellow;
+  background: yellow;
 }
 
-#cart footer, #cart header{
-    background: blue;
-    margin: 0 10px ;
+/***********/
+/****CART***/
+/***********/
+div#cart {
+  display: flex;
+  flex-direction: column;
+  background: rgb(207, 182, 182);
+  padding: 15px;
 }
 
-#cart header{
+#cart footer,
+#cart header {
+  background: rgb(173, 168, 168);
+}
+
+#cart header {
     display: flex;
+    align-items: center;
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    list-style-type: none;
     flex-direction: row;
+    justify-content: space-around;
+}
+
+#cart header > * {
+    flex: 1;
+}
+
+#cart .grande li > * {
+    flex: 1;
+}
+#cart .grande ul li p{
+    margin: 0;
+}
+
+#cart .grande ul {
+     display: flex;
     justify-content: center;
+    align-items: center; 
+    margin: 0;
+    padding: 0;
 }
 
-#cart div{
-    background: rgb(1, 255, 77);
-    margin: 0 10px;
-    height: 100%;
+#cart .grande ul li {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    width: 100%;
+    background: blue;
+    height: 50px;
+    text-align: center;
+    list-style-type: none;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-#cart footer{
-    margin-bottom: 10px;
-    padding: 10px;
+#cart .grande {
+  display: flex;
+  flex-direction: column;
+  background: rgb(242, 247, 243);
+  height: 100%;
 }
+
+#cart footer {
+  margin-bottom: 0;
+  padding: 10px;
+}
+
+#cart .payement {
+    background: rgba(255, 255, 255, 0);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 15px 0;
+}
+
