--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 html , body {
     margin: 0;
     padding: 0;
-    background-image: url(images/bg6.jpg);
+    background-image: url(images/bg1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
-    
+    font-family: 'Nunito', sans-serif;
+    color: black;
+    font-weight: bolder;
 }
 
 h1 {
     /*font-family: 'Great Vibes', cursive;*/
     font-family: 'Amatic SC', cursive;
     margin : 20px 0 0 20px;
-    color: white;
     font-size: 3.5em;
 
 }
 
 h2 {
+    box-shadow: 0 0 10px rgb(129, 129, 129);
     font-family: 'Nunito', sans-serif;
     border-radius: 10px;
-    background-color: rgb(208, 208, 211);
+    opacity: 60%;
     margin: 0;
     text-align: center;
     padding: 15px;
@@ -35,7 +37,6 @@ h3{
 h5{
     font-family: 'Amatic SC', cursive;
     margin: 0 0 0 65px;
-    color: white;
 }
 
 /* NAV */
@@ -62,7 +63,8 @@ main {
 
 /* div PRODUCTS */
 div#products {
-    font-family: 'Nunito', sans-serif;
+    backdrop-filter: blur(5px);
+    border-radius: 1em;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -83,9 +85,9 @@ div#products div.watches {
 }
 
 div#products div.watches:hover {
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 15px white;
-    scale: 103%;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 20px rgb(129, 129, 129);
+    scale: 110%;
 }
 
 /* div#products div.watches:hover img {
@@ -93,11 +95,9 @@ div#products div.watches:hover {
 } */
 
 div#products div.watches img {
+    width: 40%;
     transition: 1s;
-}
-
-div#products div.watches img {
-    width: 70%;
+    padding: 1em;
 }
 
 div#products div.watches div {
@@ -110,7 +110,6 @@ div#products div.watches div p {
     visibility: hidden;
     width: 100%;
     text-align: center;
-    color: white;
     text-shadow: 2px 2px 10px black;
 }
 
