--- a/style.css
+++ b/style.css
@@ -121,7 +121,9 @@ div#products div.watches div p {
 div#cart {
     display: flex;
     flex-direction: column;
-    background: rgb(71, 70, 70);
+    background: white;
+    backdrop-filter: blur(5px);
+    border-radius: 1em;
 }
 
 /* FOOTER */
@@ -146,21 +148,23 @@ body > footer {
 div#cart {
   display: flex;
   flex-direction: column;
-  background: rgb(207, 182, 182);
+  /* box-shadow: 0 0 10px rgb(129, 129, 129); */
   padding: 15px;
 }
 
 #cart footer,
 #cart header {
-  background: rgb(173, 168, 168);
+    background: whitesmoke;
 }
 
 #cart header {
     display: flex;
     align-items: center;
     font-size: 20px;
+    border-top: 2px solid black;
     width: 100%;
-    height: 50px;
+    padding: 15px 0;
+    margin-bottom: 15px;
     text-align: center;
     list-style-type: none;
     flex-direction: row;
@@ -179,9 +183,6 @@ div#cart {
 }
 
 #cart .grande ul {
-     display: flex;
-    justify-content: center;
-    align-items: center; 
     margin: 0;
     padding: 0;
 }
@@ -189,9 +190,10 @@ div#cart {
 #cart .grande ul li {
     display: flex;
     align-items: center;
+    margin: 10px 0;
     font-size: 20px;
+    background: rgb(207, 189, 189);
     width: 100%;
-    background: blue;
     height: 50px;
     text-align: center;
     list-style-type: none;
@@ -202,17 +204,16 @@ div#cart {
 #cart .grande {
   display: flex;
   flex-direction: column;
-  background: rgb(242, 247, 243);
   height: 100%;
 }
 
 #cart footer {
   margin-bottom: 0;
   padding: 10px;
+  border-bottom: 2px solid black;
 }
 
 #cart .payement {
-    background: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: space-around;
     align-items: center;
