--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ main {
     width: 90%;
     margin: 2em auto;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr 0.6fr;
     grid-template-rows: 10% 90%;
     gap: 30px;
 }
@@ -75,13 +75,17 @@ div#products {
 
 div#products div.watches {
     display: flex;
+    flex-flow: column;
     justify-content: center;
+    align-items: center;
     position: relative;
     border-radius: 1em;
     opacity: 90%;
     width: 25%;
     margin: 2em 1em;
     transition: 1s;
+    color: white;
+    text-shadow: 2px 2px 4px black;
 }
 
 div#products div.watches:hover {
@@ -91,26 +95,30 @@ div#products div.watches:hover {
 }
 
 div#products div.watches img {
-    width: 40%;
+    width: 30%;
     transition: 1s;
     padding: 1em;
 }
 
 div#products div.watches div {
-    position: absolute;
     width: 100%;
     top: 30%;
 }
 
 div#products div.watches div p {
-    visibility: hidden;
     width: 100%;
     text-align: center;
     text-shadow: 2px 2px 10px black;
 }
 
-div#products div.watches:hover div p{
-    visibility: visible;
+.watches div p input {
+    text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* div CART */
@@ -127,7 +135,6 @@ body > footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     width: 100%;
     bottom: 0px;
     height: 35px;
