--- a/style.css
+++ b/style.css
@@ -179,9 +179,15 @@ div#cart {
 
 #cart .grande li > * {
     flex: 1;
+    display: flex;
 }
 #cart .grande ul li p{
     margin: 0;
+    margin-left: 50px;
+}
+
+#cart ul li .montre-cart {
+    margin-left: 10px;
 }
 
 #cart .grande ul {
@@ -206,7 +212,20 @@ div#cart {
 #cart .grande ul li .btn img {
     width: 15px;
     height: 20px;
+}
 
+#cart .grande ul li span input {
+    size: "2" min="1" max="5";
+}
+
+#cart .grande ul li .btn{
+    margin-left: 30px;
+}
+
+#cart .grande ul li div img,
+#cart .grande ul li div button img {
+    width: 50px;
+    height: 50px;
 }
 
 #cart .grande {
