--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html , body {
 h2 {
     box-shadow: 0 0 10px rgb(129, 129, 129);
     font-family: 'Nunito', sans-serif;
-    border-radius: 10px;
     opacity: 60%;
     margin: 0;
     text-align: center;
@@ -71,7 +70,6 @@ main {
 /* div PRODUCTS */
 div#products {
     backdrop-filter: blur(5px);
-    border-radius: 1em;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -86,19 +84,19 @@ div#products div.watches {
     justify-content: center;
     align-items: center;
     position: relative;
-    border-radius: 1em;
+    background:rgba(0, 0, 0, 0.1);
     opacity: 90%;
     width: 25%;
     height: fit-content;
     margin: 1em 1em;
+    padding: 1em;
     transition: 1s;
     color: white;
     text-shadow: 2px 2px 4px black;
 }
 
 div#products div.watches:hover {
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 20px rgb(129, 129, 129);
+    box-shadow: 0 0 10px rgba(128, 128, 128);
     scale: 110%;
 }
 
@@ -109,12 +107,19 @@ div#products div.watches img {
 }
 
 div#products div.watches div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     top: 30%;
 }
 
+div#products div.watches div *{
+    height: fit-content;
+}
+
 div#products div.watches div p {
-    width: 100%;
+    width: 30%;
     text-align: center;
     text-shadow: 2px 2px 10px black;
 }
@@ -151,7 +156,6 @@ div#cart {
   padding: 15px;
   height: 80%;
   background: white;
-  border-radius: 1em;
 }
 
 #cart footer,
