--- a/style.css
+++ b/style.css
@@ -223,6 +223,8 @@ div#cart {
 
 #cart .grande ul li .btn{
     margin-left: 30px;
+    border: none;
+    background: transparent;
 }
 
 #cart .grande ul li div img,
@@ -236,6 +238,7 @@ div#cart {
   flex-direction: column;
   height: 100%;
   overflow-y: scroll;
+  background:rgba(0, 0, 0, 0.1);
 }
 
 #cart footer {
