--- a/style.css
+++ b/style.css
@@ -245,9 +245,15 @@ div#cart {
 }
 
 #cart footer {
-  margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     padding: 10px;
-  border-bottom: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+#total_in_cart{
+    margin-right: 30px;
 }
 
 #cart .payement {
