--- a/style.css
+++ b/style.css
@@ -84,15 +84,14 @@ div#products div.watches {
     justify-content: center;
     align-items: center;
     position: relative;
-    background:rgba(0, 0, 0, 0.1);
+    background:rgba(0, 0, 0, 0.2);
     opacity: 90%;
     width: 25%;
     margin: 1em 1em;
     padding: 1em;
     transition: 1s;
     color: white;
-    text-shadow: 2px 2px 4px black;
-    -webkit-font-smoothing: subpixel-antialiased;
+    text-shadow: 1px 1px 4px black;
 }
 
 div#products div.watches:hover {
@@ -123,14 +122,17 @@ div#products div.watches div p {
     text-shadow: 2px 2px 10px black;
 }
 
-.watches div p input {
-    text-align: center;
+div#products div.watches div button {
+    border: 1px solid white;
+    color: white;
+    background: transparent;
+    cursor: pointer;
+    transition: 1s;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+div#products div.watches div button:hover {
+    text-shadow: 0 0 4px white;
+    box-shadow: 0 0 4px white;
 }
 
 /* FOOTER */
@@ -154,12 +156,15 @@ div#cart {
   /* box-shadow: 0 0 10px rgb(129, 129, 129); */
   padding: 15px;
   height: 80%;
-  background: white;
+  background: rgb(255, 255, 255, 0.9);
+  color: white;
+  text-shadow: 1px 1px 4px black;
+  box-shadow: 0 0 4px rgba(128, 128, 128);;
 }
 
 #cart footer,
 #cart header {
-    background: whitesmoke;
+    background: rgba(207, 189, 189, 0.767);
 }
 
 #cart .payement img {
@@ -232,7 +237,7 @@ div#cart {
 }
 
 #cart .grande ul li div img{
-    width: 30px;
+    width: 20px;
     height: 30px;
 }
 
