--- a/style.css
+++ b/style.css
@@ -271,3 +271,89 @@ div#cart {
 #cart .grande select {
     text-align: center;
 }
+
+/* responsive for smaller screens________________________________________________________________________________*/
+@media screen and (max-width: 1440px) {
+  div#products div.watches div {
+    flex-direction: column;
+}
+div#products {
+    overflow-y: scroll;
+}
+body > footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+}
+ 
+/* responsive for tablets _______________________________________________________*/
+@media screen and (max-width: 778px) {
+main {
+        display: grid;
+        grid-template-columns: 2fr 0.9fr;
+        grid-template-rows: 7vh 60vh;
+        gap: 30px;
+    }   
+div#products div.watches {
+    width: 70%;
+}
+nav {
+    height: 20vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#nav_logo{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10px;
+    
+}
+h2,h3 {
+    font-size: 1.2em;
+}
+}
+
+/* responsive for smartphones _______________________________________________________*/
+@media screen and (max-width: 425px) {
+    html , body {
+    overflow-y: scroll;
+}  
+    main {
+            width: 95%;
+            margin: 2.5em auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+     }  
+
+    div#products {
+    width: 100%;
+    } 
+
+    div#products div.watches {
+        width: 70%;
+    }
+
+    nav {
+        height: 20vh;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    #nav_logo{
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+
+    h2,h3 {
+        font-size: 1.2em;
+        background-color: white;
+        opacity: 70%;
+    }
+    }
