--- a/style.css
+++ b/style.css
@@ -419,6 +419,98 @@ div#cart {
     text-align: center;
 }
 
+
+
+    /***************************************/
+    /***************************************/
+    /******************Home*****************/
+    /***************************************/
+    /***************************************/
+
+    #home{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 80%;
+    }
+
+    #home .discret{
+        font-size: 10px;
+        color: rgba(204, 192, 175, 0.233);
+    }
+
+    #home button,
+    #home p{
+        display: flex;
+        z-index: 10;
+        margin: 20px 10px;
+    }
+
+    #home p{
+        font-size: 30px;
+        width: 800px;
+        text-align: center;
+        color: white;
+    }
+
+    #home button {
+        width: fit-content;
+        font-size: 20px;
+        text-align: center;
+        background-color: transparent;
+        border: 2px solid white;
+    }
+
+    #home button a {
+        padding: 15px;
+        font-size: 1em;
+        display: flex;
+        text-align: center;
+    }
+
+    .slider {
+        position: absolute;
+        width: 100vw;
+        overflow: hidden;
+        height: 90%;
+    }
+
+    .slides{
+        animation: glisse 15s infinite;
+        display: flex;
+    }
+    .slide img {
+        width: 2000px;
+        height: auto;
+    }
+
+    @keyframes glisse{
+        0% {
+            transform: translateX(0);
+        }
+        10% {
+            transform: translateX(0);
+        }
+        33% {
+            transform: translateX(-2000px);
+        }
+        43% {
+            transform: translateX(-2000px);
+        }
+        66% {
+            transform: translateX(-4000px);
+        }
+        76% {
+            transform: translateX(-4000px);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+
 /* responsive for smaller screens________________________________________________________________________________*/
 @media screen and (max-width: 1440px) {
   div#products div.watches div {
@@ -460,6 +552,22 @@ nav {
 }
 h2,h3 {
     font-size: 1.2em;
+}
+
+section#home {
+    width: 90%;
+    margin: 0 auto;
+    height: 70%;
+}
+
+#home p{
+    font-size: 1.3em;
+    width: 50%;
+    padding: 0 auto;
+}
+
+#home img{
+    height: 600px;
 }
 }
 
@@ -554,80 +662,17 @@ h2,h3 {
         margin-bottom: 10%;
       }
 
+      section#home{
+        height: 84%;;
+      }
+
+      #home p{
+        font-size: 1.3em;
+        width: 90%;
+        padding: 0 auto;
+    }
+
     }
 
 
-    /***************************************/
-    /***************************************/
-    /******************Home*****************/
-    /***************************************/
-    /***************************************/
-
-    #home{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        width: 100%;
-        height: 80%;
-    }
-
-    #home button,
-    #home p{
-        display: flex;
-        z-index: 10;
-        margin: 20px 10px;
-    }
-
-    #home p{
-        font-size: 30px;
-        color: white;
-    }
-
-    #home button {
-        padding: 5px 5px;
-        width: 50px;
-        font-size: 15px;
-        border-radius: 20px;
-        background-color: transparent;
-    }
-
-    .slider {
-        position: absolute;
-        width: 100vw;
-        overflow: hidden;
-        height: 90%;
-    }
-
-    .slides{
-        animation: glisse 15s infinite;
-        display: flex;
-    }
-    .slide img {
-        width: 2500px;
-        height: 5000px;
-    }
-
-    @keyframes glisse{
-        0% {
-            transform: translateX(0);
-        }
-        10% {
-            transform: translateX(0);
-        }
-        33% {
-            transform: translateX(-2000px);
-        }
-        43% {
-            transform: translateX(-2000px);
-        }
-        66% {
-            transform: translateX(-4000px);
-        }
-        76% {
-            transform: translateX(-4000px);
-        }
-        100% {
-            transform: translateX(0);
-        }
-    }
+    
