--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ nav {
     justify-content: space-around;
 }
 
+nav > div:first-child, nav > div:last-child {
+    flex: 1;
+}
+
 h1,h5 {
     font-family: 'Amatic SC', cursive;
     display: flex;
@@ -55,6 +59,26 @@ a {
     text-decoration: none;
     color: white;
     transition: 0.4s;
+}
+
+button {
+    border: none;
+    background: transparent;
+}
+
+input {
+    margin: 1em;
+    width: 0;
+    visibility: hidden;
+    transition: width 0.4s ease-out,
+    visibility 0.39s ease-out;
+}
+
+input.active {
+    width: 150px;
+    visibility: visible;
+    transition: width 0.4s ease-out,
+    visibility 0.4s ease-out;
 }
 
 a:hover {
