--- a/style.css
+++ b/style.css
@@ -65,6 +65,21 @@ a:hover {
     display:flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-content: center;
+}
+
+#cart_logo{
+    height: 25px;
+    margin: 0 0 10px 12px;
+}
+
+#number_of_item_in_cart{
+    margin: 0 0 15px 0;
+    font-weight: bolder;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
 }
 
 /* MAIN */
@@ -429,15 +444,23 @@ h2,h3 {
 
     .logo {
         height: 20px;
-        margin: 5px 8px;
+        margin: 5px 10px;
       }
 
-     #cart_logo:hover > #products{
-        
-            display: block;
-            position: absolute;
-            
-      }
+      #cart_logo{
+        height: 20px;
+        margin: 0 0 5px 12px;
+    }
+    
+    #number_of_item_in_cart{
+        margin: 0 0 15px 0;
+        font-weight: bolder;
+        background-color: white;
+        color: white;
+        border-radius: 50%;
+        padding: 1px 5px;
+        font-size: 0.7em;
+    }
 
     h2,h3 {
         font-size: 1.2em;
