--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ a {
 button {
     border: none;
     background: transparent;
+    cursor: pointer;
 }
 
 input {
@@ -89,7 +90,8 @@ a:hover {
     display:flex;
     flex-direction: row;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: flex-end;
+    margin-right: 5em;
 }
 
 #cart_logo{
