put balise a on img watches

--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ div#products div.watches div *{
 }
 
 div#products div.watches a {
+    display: flex;
+    justify-content: center;
     font-size: 1.1em;
 }
 
