--- a/style.css
+++ b/style.css
@@ -575,12 +575,17 @@ body > footer {
 
 /* responsive for tablets _______________________________________________________*/
 @media screen and (max-width: 778px) {
+html , body {
+        background-attachment: fixed;
+        
+}  
+
 main {
         display: grid;
         grid-template-columns: 2fr 0.9fr;
         grid-template-rows: 7vh 60vh;
-        gap: 30px;
-    }   
+        gap: 10px;
+}   
 div#products div.watches {
     width: 70%;
 }
@@ -619,7 +624,7 @@ section#home {
 
 
 /* responsive for smartphones _______________________________________________________*/
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 778px) {
     html , body {
     background-attachment: fixed;
     
@@ -710,7 +715,8 @@ section#home {
     } 
 
     div#products div.watches {
-        width: 35%;
+        width: 30%;
+        margin: 12px;
     }
 
     div#cart {
@@ -763,16 +769,7 @@ section#home {
 
     }
 
-
-      section#home{
-        height: 84%;;
-      }
-
-      #home p{
-        font-size: 1.3em;
-        width: 90%;
-        padding: 0 auto;
-    }
+    
 
 
     
