--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ a:hover {
 #number_of_item_in_cart{
     margin: 0 0 15px 0;
     font-weight: bolder;
-    background-color: black;
-    color: white;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(252, 250, 250);
     border-radius: 50%;
     padding: 2px 6px;
 }
@@ -632,6 +632,35 @@ div#cart {
     flex-direction: column;
 }
 
+h1{
+    font-size: 3.5em;
+    margin: 5px 0 0 0;
+}
+
+h5{
+    font-size: 1em;
+}
+
+.logo {
+    height: 15px;
+    margin: 5px 10px;
+  }
+
+  #cart_logo{
+    height: 15px;
+    margin: 0 0 5px 12px;
+}
+
+#number_of_item_in_cart{
+    margin: 0 0 15px 0;
+    font-weight: bolder;
+    background-color: white;
+    color: white;
+    border-radius: 50%;
+    padding: 1px 5px;
+    font-size: 0.7em;
+}
+
 body > footer {
     display: flex;
     justify-content: center;
@@ -679,7 +708,8 @@ body > footer {
 
     #nav_logo{
         display:flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
+        flex-flow: wrap;
         justify-content: center;
         align-items: center;
         margin-right: 10px;
@@ -712,25 +742,7 @@ body > footer {
         font-size: 0.8em;
     }
 
-    .logo {
-        height: 20px;
-        margin: 5px 10px;
-      }
-
-      #cart_logo{
-        height: 20px;
-        margin: 0 0 5px 12px;
-    }
     
-    #number_of_item_in_cart{
-        margin: 0 0 15px 0;
-        font-weight: bolder;
-        background-color: white;
-        color: white;
-        border-radius: 50%;
-        padding: 1px 5px;
-        font-size: 0.7em;
-    }
 
     h2,h3 {
         font-size: 1.2em;
