--- a/style.css
+++ b/style.css
@@ -592,13 +592,12 @@ div#cart {
         align-items: center;
     }
 
-    .panier .form-panier{
+    .panier .form-btn{
         display: flex;
         flex-direction: column;
         margin: 5px 5px;
         font-size: 25px;
         width: fit-content;
-        background-color: teal;
         visibility: visible;
     }
 
@@ -606,10 +605,42 @@ div#cart {
         margin: 50px 0;
     }
 
-    article .panier .qcm{
+    .panier span{
         display: flex;
         justify-content: center;
-        align-self: center;
+        align-items: center;
+        width: 100%;
+        height: 80px;
+        background-color: bisque;
+        font-size: 40px;
+    }
+
+    #panier-spe{
+        padding: 15px 15px;
+    }
+
+    .panier-list {
+        background-color: aqua;
+        width: 100%;
+        height: 60%;
+        margin: 10px 0;
+    }
+
+    .panier .total-ttc{
+        height: 30%;
+        width: 100%;
+    }
+
+    .panier-prix{
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+    }
+
+    .panier .total-ttc .panier-desc{
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
     }
     
     .panier img{
@@ -617,11 +648,9 @@ div#cart {
         height: 100px;
     }
 
-    #panier-spe{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+    .buy button {
+        border: 5px solid blue;
+        margin: 10px 0;
     }
     
 
