--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ a:hover {
 }
 
 /* MAIN */
-main {
+.with_cart{
     /* height: 80vh; */
     width: 80%;
     margin: 2em auto;
@@ -120,6 +120,13 @@ main {
     grid-template-columns: 2fr 0.7fr;
     grid-template-rows: 7vh 60vh;
     gap: 30px;
+}
+
+.without_cart{
+    width: 70%;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
 }
 
 /* div PRODUCTS */
