--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 html , body {
     margin: 0;
     padding: 0;
@@ -140,7 +142,7 @@ div#products {
     width: 100%;
 }
 
-div#products div.watches {
+div#products div.watch {
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -156,17 +158,17 @@ div#products div.watches {
     text-shadow: 1px 1px 4px black;
 }
 
-div#products div.watches:hover {
+div#products div.watch:hover {
     box-shadow: 0 0 10px rgba(128, 128, 128);
 }
 
-div#products div.watches img {
+div#products div.watch img {
     width: 40%;
     transition: 0.4s;
     padding: 1em;
 }
 
-div#products div.watches div {
+div#products div.watch div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -174,23 +176,24 @@ div#products div.watches div {
     top: 30%;
 }
 
-div#products div.watches div *{
+div#products div.watch div *{
     height: fit-content;
 }
 
-div#products div.watches a {
+div#products div.watch a {
     display: flex;
     justify-content: center;
     font-size: 1.1em;
+    text-align: center;
 }
 
-div#products div.watches div p {
+div#products div.watch div p {
     width: 30%;
     text-align: center;
     text-shadow: 2px 2px 10px black;
 }
 
-div#products div.watches div button {
+div#products div.watch div button {
     border: 2px solid white;
     color: white;
     background: transparent;
@@ -199,7 +202,7 @@ div#products div.watches div button {
     font-size: 1em;
 }
 
-div#products div.watches div button:hover {
+div#products div.watch div button:hover {
     text-shadow: 0 0 4px white;
     box-shadow: 0 0 4px white;
 }
@@ -284,7 +287,7 @@ body > footer {
 }
 
 .mainDiv .watchesPhotos img:hover {
-    scale: 1.1;
+    transform : scale(1.1);
 }
 
 /* MODAL CONTAINER */
@@ -509,10 +512,10 @@ div#cart {
         height: 84%;;
       }
 
-      #home p{
+    #home p{
         font-size: 1.3em;
         width: 90%;
-        padding: 0 auto;
+        padding: 0;
     }
 
     #home p{
@@ -664,8 +667,17 @@ div#cart {
 
 /* responsive for smaller screens________________________________________________________________________________*/
 @media screen and (max-width: 1440px) {
-  div#products div.watches div {
+  div#products div.watch div {
     flex-direction: column;
+}
+
+div#products {
+    max-height: 65vh;
+    overflow-y: scroll;
+}
+
+#cart {
+    max-height: 55vh;
 }
 
 h1{
@@ -796,49 +808,49 @@ input#searchBar {
       }
 
       /********MEDIA PAGE TYPE********/
-      div.mainDiv {
+    div.mainDiv {
         flex-flow: column;
         height: fit-content;
         text-align: justify;
         width: 90%;
         margin: 0 auto;
-      }
+    }
     
-      div.mainDiv div {
+    div.mainDiv div {
         padding: 1em;
         margin: 0;
         width: 100%;
-      }
+    }
     
-      div.mainDiv div h3 {
+    div.mainDiv div h3 {
         background: transparent;
         width: fit-content;
         text-align: center;
-      }
+    }
     
-      div.mainDiv #currentPhoto {
+    div.mainDiv #currentPhoto {
         width: 50%;
-      }
+    }
     
-      div.mainDiv .watchesPhotos {
+    div.mainDiv .watchesPhotos {
         flex-flow: row;
         width: 20%;
-      }
+    }
     
-      div.mainDiv .watchesPhotos img {
+    div.mainDiv .watchesPhotos img {
         margin: 0 1em;
-      }
+    }
 
-      section#home{
+    section#home{
         height: 84%; 
         width: 90%;
         margin: 0 auto;
-      }
+    }
 
-      #home p{
+    #home p{
         font-size: 1.3em;
         width: 90%;
-        padding: 0 auto;
+        padding: 0;
     }
 
     #home img {
@@ -871,7 +883,7 @@ input#searchBar {
         justify-content: flex-start;
     }
 
-    div#products div.watches {
+    div#products div.watch {
         width: fit-content;
         min-width: 250px;
     }
